# categorical-feature-encoding

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: rf_model.ipynb  v1_categorical_entity_embeddings.ipynb  v2_categorical_entity_embeddings.ipynb
